src/test/ui/borrowck/borrowck-block-unint.stderr
error[E0381]: binding `x` isn't initialized
  --> $DIR/borrowck-block-unint.rs:4:11
   |
LL |     let x: isize;
   |         - variable declared here
LL |     force(|| {
   |           ^^ `x` borrowed here but it isn't initialized
LL |         println!("{}", x);
   |                        - borrow occurs due to use in closure

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
